taxonomy + geom feats

--- a/newer_presentation.tex
+++ b/newer_presentation.tex
@@ -152,114 +152,117 @@
             \end{frame}
 
     \section{Methodology}
-        \begin{frame}{The evalutation pipeline sketch}
-            \begin{figure}
-                \includegraphics[width=\textwidth]{graphical_abstract}
-            \end{figure}
-        \end{frame}
-
         \subsection{Error taxonomy}
             \begin{frame}{Bidimensional taxonomy}
-                In order to establish our taxonomy, two criterea are taken into account:
+                Two criteria determine the taxonomy structure:
                 \begin{itemize}[label=$\blacktriangleright$, font=\color{IGNGreen}]
                     \item<1-> the \acrshort{acr::lod};
-                    \item<2-> the \emph{finesse}: the semantization evaluation level.
-                    \begin{itemize}
-                        \item<3-> an error is of maximal \emph{finesse} $\Rightarrow$ corresponds to a unit (semantically) action required for the operator to correct the model: $\equiv$ \emph{atomic} error.
-                    \end{itemize}
+                    \item<2-> the \emph{finesse}: the semantic evaluation level.
                 \end{itemize}
-            \end{frame}
-            \begin{frame}{Taxonomy \emph{finesse}}
-                \begin{enumerate}[label = (\roman*)., font=\color{IGNGreen}]
-                    \item<1-> \emph{finesse} $= 0$ $\longrightarrow$ \textbf{Unqualifiable} / \textbf{Qualifiable};
-                    \item<2-> \emph{finesse} $= 1$ $\longrightarrow$ \textbf{Valid} / \textbf{Erroneous};
-                    \item<3-> \emph{finesse} $= 2$:
-                    \begin{itemize}[leftmargin=12em, font=\color{IGNDarkOrange}]
-                        \item[\acrshort{acr::lod}-0 $\cup$ \acrshort{acr::lod}-1 $\longrightarrow$] \textbf{Building Errors}
-                        \item[\acrshort{acr::lod}-2 $\longrightarrow$] \textbf{Facet Errors}
-                        \item[\acrshort{acr::lod}-3 $\longrightarrow$] \textbf{Superstructure Errors}
-                    \end{itemize}
-                    \begin{figure}[H]
-                        \begin{center}
-                            \includestandalone[height=.2\textheight]{lods}
-                        \end{center}
-                    \end{figure}
-                    \item<4-> \emph{finesse} $= 3$ $\longrightarrow$ \emph{atomic} errors.
-                \end{enumerate}
-            \end{frame}
-            \begin{frame}[plain]{\emph{Atomic} errors for $2.5D$ overhead reconstruction}
-                \only<1>{
-                    \begin{figure}
-                        \begin{center}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/building/under_segmentation}}
-                                \caption{\label{fig::bul_under} Building under segmentation}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/building/over_segmentation}}
-                                \caption{\label{fig::bul_over} Building over segmentation}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/building/footprint}}
-                                \caption{\label{fig::bul_footprint} Imprecise footprint border}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/building/footprint_topology}}
-                                \caption{\label{fig::bul_height} Inaccurate footprint topology}
-                            \end{subfigure}
-                            \caption{Building \emph{atomic} errors illustration.}
-                        \end{center}
-                    \end{figure}
-                }
-                \only<2>{
-                    \begin{figure}
-                        \begin{center}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/facet/under_segmentation}}
-                                \caption{\label{fig::fac_under} Facet under segmentation}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/facet/over_segmentation}}
-                                \caption{\label{fig::fac_over} Facet over segmentation}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/facet/mis_segmentation}}
-                                \caption{\label{fig::fac_footprint} Facet imprecise borders}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/facet/topology}}
-                                \caption{\label{fig::fac_height} Inaccurate topology}
-                            \end{subfigure}
-                            \hspace{10pt}
-                            \begin{subfigure}{.28\textwidth}
-                                \fbox{\includegraphics[width=\textwidth]{images/errors/facet/slope}}
-                                \caption{\label{fig::fac_height} Imprecise geometry}
-                            \end{subfigure}
-                            \caption{Facet \emph{atomic} errors illustration.}
-                        \end{center}
-                    \end{figure}
+                \uncover<3->{
+                    \begin{block}{Definition}
+                        An error is of maximal \emph{finesse} $\Leftrightarrow$ it corresponds, semantically, to a unitary action required to correct the model. The error is called \emph{atomic}.
+                    \end{block}
                 }
             \end{frame}
-            \begin{frame}{Taxonomy parameters}
-                The qualification has $3$ parameters:
-                \begin{itemize}[label=$\blacktriangleright$, font=\color{IGNGreen}]
-                    \item<1-> \emph{finesse}: the semantic level desired;
-                    \item<2-> $\acrshort{acr::elod}$: the evaluation level of details;
-                    \item<3-> \emph{exclusivity}: report only the lowest \acrshort{acr::lod}- errors (\emph{exclusive}) or all errors (\emph{non exclusive}).
-                \end{itemize}
-            \end{frame}
-            \begin{frame}{Error taxonomy summary}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 0$)}
                 \begin{figure}
-                    \includestandalone[mode=buildnew, width=\textwidth]{taxonomy_tree}
+                    \includestandalone[mode=buildnew, height=.7\textheight]{finesse_0_taxonomy}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 1$)}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, height=.7\textheight]{finesse_1_taxonomy}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 2$)}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, height=.7\textheight]{finesse_2_taxonomy}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 2$)}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, height=.7\textheight]{finesse_2_taxonomy_lods}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 3$)}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, width=\textwidth]{finesse_3_bul_taxonomy}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Building \textit{atomic} errors: 2.5D overhead reconstruction case}
+                \begin{figure}
+                    \begin{center}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/building/under_segmentation}}
+                            \caption{\label{fig::bul_under} Under segmentation}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/building/over_segmentation}}
+                            \caption{\label{fig::bul_over} Over segmentation}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/building/footprint}}
+                            \caption{\label{fig::bul_footprint} Imprecise border}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/building/footprint_topology}}
+                            \caption{\label{fig::bul_height} Inaccurate topology}
+                        \end{subfigure}
+                    \end{center}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Error taxonomy (\textit{finesse} $= 3$)}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, width=\textwidth]{finesse_3_all_taxonomy}
+                \end{figure}
+            \end{frame}
+            \begin{frame}{Facet \textit{atomic} errors: 2.5D overhead reconstruction case}
+                \begin{figure}
+                    \begin{center}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/facet/under_segmentation}}
+                            \caption{\label{fig::fac_under} Under segmentation}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/facet/over_segmentation}}
+                            \caption{\label{fig::fac_over} Over segmentation}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/facet/mis_segmentation}}
+                            \caption{\label{fig::fac_footprint} Imprecise borders}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/facet/topology}}
+                            \caption{\label{fig::fac_height} Inaccurate topology}
+                        \end{subfigure}
+                        \hspace{10pt}
+                        \begin{subfigure}{.28\textwidth}
+                            \fbox{\includegraphics[width=\textwidth]{images/errors/facet/slope}}
+                            \caption{\label{fig::fac_height} Imprecise geometry}
+                        \end{subfigure}
+                    \end{center}
                 \end{figure}
             \end{frame}
         \subsection{Extracted features}
+            \begin{frame}{The evalutation pipeline sketch}
+                \begin{figure}
+                    \includegraphics[width=\textwidth]{graphical_abstract}
+                \end{figure}
+            \end{frame}
+
+            \begin{frame}{Geometric features}
+                \begin{figure}
+                    \includegraphics[width=\textwidth]{building_graph}
+                \end{figure}
+            \end{frame}
+        
         \subsection{Classification process}
             \begin{frame}{Classifier}
                 We opted for a \textbf{Random Forest} classifier, because:
@@ -275,6 +278,19 @@
                         \item<6-> $1000$ trees to cover the whole the attributes space.
                     \end{itemize}
                 }
+            \end{frame}
+            \begin{frame}{Taxonomy label parameters}
+                We use $3$ parameters to extract labels from the taxonomy:
+                \begin{itemize}[label=$\blacktriangleright$, font=\color{IGNGreen}]
+                    \item<1-> \emph{finesse}: the semantic level desired;
+                    \item<2-> $\acrshort{acr::elod}$: the evaluation level of details;
+                    \item<3-> \emph{exclusivity}: report only the lowest \acrshort{acr::lod}- errors (\emph{exclusive}) or all errors (\emph{non exclusive}).
+                \end{itemize}
+            \end{frame}
+            \begin{frame}{Error taxonomy summary}
+                \begin{figure}
+                    \includestandalone[mode=buildnew, width=\textwidth]{taxonomy_tree}
+                \end{figure}
             \end{frame}
             \begin{frame}{Classification problems summary}
                 \begin{table}
