--- a/newer_presentation.tex
+++ b/newer_presentation.tex
@@ -259,7 +259,7 @@
 
             \begin{frame}{Geometric features}
                 \begin{figure}
-                    \includegraphics[width=\textwidth]{building_graph}
+                    \includegraphics[width=.25\textwidth]{building_graph}
                 \end{figure}
             \end{frame}
         
