--- a/building_graph.tex
+++ b/building_graph.tex
@@ -6,6 +6,9 @@
 \usepackage{tikz}
 \usepackage{fourier}
 
+\usepackage{xcolor}
+\definecolor{darkgreen}{RGB}{0, 155, 85}
+
 \usetikzlibrary{calc, 3d}
 
 \begin{document}
@@ -25,7 +28,7 @@
         
         \begin{scope}[canvas is xy plane at z=1]
         	\path[graph_edge] (-2,2) edge (1.5,6);
-        	\path[graph_edge] (4,2) edge (1.5,6);
+        	\path[graph_edge, blue, line width=3pt] (4,2) edge (1.5,6);
         	\path[graph_edge] (4,2) edge (1.5,-2);
         	\path[graph_edge] (-2,2) edge (1.5,-2);
         \end{scope}
@@ -45,7 +48,7 @@
         \path[graph_edge] (1,-1,2.25) edge (1.5,-2,1);
         
         \begin{scope}[canvas is zy plane at x=5]
-            \path[face] (0,0) -- (2,0) -- (2.75,2.5) -- (2,4) -- (0,4) -- cycle;
+            \path[face, darkgreen] (0,0) -- (2,0) -- (2.75,2.5) -- (2,4) -- (0,4) -- cycle;
 		\end{scope}
         \begin{scope}[canvas is zx plane at y=6]
           	\path[face] (0,0) rectangle (2,3);
