--- a/taxonomy_tree.tex
+++ b/taxonomy_tree.tex
@@ -57,7 +57,7 @@
                                     node[end, label=right:\textsc{Inaccurate footprint topology}] {}
                                 }
                                 child {
-                                    node[end, label=right:\textsc{Imprecise slope}] {}
+                                    node[end, label=right:\textsc{Imprecise geometry}] {}
                                 }
                                 edge from parent
                             }
@@ -81,7 +81,7 @@
         \draw[dashed, purple, ultra thick] (facet_errors |- b_under.south) + (-1.5,-1) -- (families_max);
         \draw[dashed, blue, ultra thick] (b_under.south) + (-1,-1) -- (atomic_max);
         
-        \draw[dash dot, ultra thick] (lod_max)  -- (lod_min) node[below, align=left, xshift=-1cm] {\scriptsize LoD0 $\cup$ LoD1} node [above, xshift=-.5cm] {\scriptsize LoD2};
+        \draw[dash dot, ultra thick] (lod_max)  -- (lod_min) node[below, align=left, xshift=-1cm] {\scriptsize LoD-0 $\cup$ LoD-1} node [above, xshift=-.5cm] {\scriptsize LoD-2};
         
         \path (facet_errors |- b_under.south) + (-1.5,-1.25) node (temp) {};
         \path (lod_min |- b_under.south) + (-1.5,-1.25) node (last) {};
