--- a/beamerinnerthemeign.sty
+++ b/beamerinnerthemeign.sty
@@ -61,11 +61,7 @@
         \path (logo.west) + (6, -.5) node (trame) {\usebox \tramebox};
         \path (logo.south east) + (3.125, -3.5) node (amiens) {
             {
-                \transparent{.6}\adjincludegraphics[
-                    width=10cm,
-                    trim={0 0 0 {10cm}},
-                    clip
-                ]{images/logos/huez-echine-de-praouat}
+                \transparent{.5}\includegraphics[width=10cm]{images/logos/background}
             }
         };
         \path (trame.east) + (-2, -1) node (title_box) {\usebox \titlebox};
@@ -194,11 +190,7 @@
         \path (logo.west) + (6, -.5) node (trame) {\usebox \tramebox};
         \path (logo.south east) + (3.125, -3.5) node (amiens) {
             {
-                \transparent{.6}\adjincludegraphics[
-                    width=10cm,
-                    trim={0 0 0 {10cm}},
-                    clip
-                ]{images/logos/huez-echine-de-praouat}
+                \transparent{.5}\includegraphics[width=10cm]{images/logos/background}
             }
         };
         \path (trame.east) + (-2, -1) node (title_box) {\usebox \titlebox};
