--- a/finesse_3_all_taxonomy.tex
+++ b/finesse_3_all_taxonomy.tex
@@ -51,10 +51,10 @@
                                     node[end, label=right:\textsc{Over segmentation}] {}
                                 }
                                 child {
-                                    node[end, label=right:\textsc{Imprecise footprint borders}] {}
+                                    node[end, label=right:\textsc{Imprecise borders}] {}
                                 }
                                 child {
-                                    node[end, label=right:\textsc{Inaccurate footprint topology}] {}
+                                    node[end, label=right:\textsc{Inaccurate topology}] {}
                                 }
                                 child {
                                     node[end, label=right:\textsc{Imprecise geometry}] {}
